ansible install vault

--- a/tools-setup/Makefile
+++ b/tools-setup/Makefile
@@ -8,3 +8,7 @@ infra-destroy:
 	git pull
 	terraform init
 	terraform destroy -auto-approve
+
+ansible:
+	git pull
+	ansible-playbook -i $(tool_name)-int.harshaldevops.online, -e ansible_user=harshal  -e ansible_password=harshal@12345 tool_setup.yml -e tool_name=$(tool_name)
