ansible install vault

--- a/tools-setup/roles/vault/tasks/main.yml
+++ b/tools-setup/roles/vault/tasks/main.yml
@@ -9,7 +9,7 @@
     state: installed
 
 - name: enable http in vault.hcl file
-  file:
+  copy:
     src: vault.hcl
     dest: /etc/vault.d/vault.hcl
 
