--- a/vault-secrets/Makefile
+++ b/vault-secrets/Makefile
@@ -1,5 +1,5 @@
 default:
 	git pull
 	terraform init
-	terraform plan	-var token=${ token }
-	terraform apply -auto-approve -var token=${ token }
+	terraform plan	-var token=$(token)
+	terraform apply -auto-approve -var token=$(token)
