--- a/tools-setup/roles/github-runner/tasks/main.yml
+++ b/tools-setup/roles/github-runner/tasks/main.yml
@@ -8,6 +8,12 @@
     name: docker-ce
     state: installed
 
+- name: start docker on vm
+  systemd_service:
+    name: docker
+    state: started
+    enabled: true
+
 - name: create runner containers 
   loop:
     - runner-1
@@ -15,13 +21,11 @@
     - runner-3
   community.docker.docker_container:
     name: "{{ item }}"
-    image: rkalluru/github-runner
+    image: rkalluru/d84-github-runner
     state: started
     pull: always
     restart: true
     env:
-      # ORG: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-infra/data/github-runner:ORG token={{ token }} url=http://vault-int.harshaldevops.online:8200') }}"
-      # TOKEN: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-infra/data/github-runner:TOKEN token={{ token }} url=http://vault-int.harshaldevops.online:8200') }}"
-      ORG: "https://github.com/Harshal-HP"
-      TOKEN: "BJWE6T2X6U5MFMCUVZIPHGLIN7MZ6"
+      ORG: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-infra/data/github-runner:ORG token={{ token }} url=http://vault-int.harshaldevops.online:8200') }}"
+      TOKEN: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-infra/data/github-runner:TOKEN token={{ token }} url=http://vault-int.harshaldevops.online:8200') }}"
       NAME: "{{ item }}"
