--- a/tools-setup/Makefile
+++ b/tools-setup/Makefile
@@ -11,4 +11,8 @@ infra-destroy:
 
 ansible:
 	git pull
+	ansible-playbook -i $(tool_name)-int.harshaldevops.online, -e ansible_user=harshal  -e ansible_password=harshal@12345 tool_setup.yml -e tool_name=$(tool_name)
+
+ansible-runner:
+	git pull
 	ansible-playbook -i $(tool_name)-int.harshaldevops.online, -e ansible_user=harshal  -e ansible_password=harshal@12345 tool_setup.yml -e tool_name=$(tool_name) -e token=$(token)
