--- a/tools-setup/roles/github-runner/tasks/main.yml
+++ b/tools-setup/roles/github-runner/tasks/main.yml
@@ -22,9 +22,13 @@
 
 - name: Get Runner token
   shell: |
-    gh api --method POST -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28"   /orgs/Harshal-HP/actions/runners/registration-token | jq -r .token
+    gh api --method POST -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /orgs/Harshal-HP/actions/runners/registration-token | jq -r .token
   delegate_to: localhost
   register: gh_org_token
+
+- name: Print registered output
+  debug:
+    var: gh_org_token.stdout
 
 - name: create runner containers 
   loop:
