--- a/tools-setup/roles/github-runner/tasks/main.yml
+++ b/tools-setup/roles/github-runner/tasks/main.yml
@@ -23,6 +23,8 @@
 - name: Get Runner token
   shell: |
     gh api --method POST -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /orgs/Harshal-HP/actions/runners/registration-token | jq -r .token
+  become: yes
+  become_user: harshal
   delegate_to: localhost
   register: gh_org_token
 
