--- a/tools-setup/Makefile
+++ b/tools-setup/Makefile
@@ -16,3 +16,7 @@ ansible:
 github-runner:
 	git pull
 	ansible-playbook -i github-runner-int.harshaldevops.online, -e ansible_user=harshal  -e ansible_password=harshal@12345 tool_setup.yml -e tool_name=github-runner -e token=$(token)
+
+elk-stack:
+	git pull
+	ansible-playbook -i elk-stack-int.harshaldevops.online, -e ansible_user=harshal  -e ansible_password=harshal@12345 tool_setup.yml -e tool_name=elk-stack -e token=$(token)	
